# django-cinema

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yml  conftest.py  justfile  notes.md  pyproject.toml  requirements.in  requirements.txt
api/: filters.py  routers.py  serializers.py  tests.py  urls.py  utils.py  views.py  viewsets.py
cinema/: admin.py  models.py  tests.py
cinema/management/commands/: seed.py
cinema/migrations/: 0001_initial.py  0002_spectatorauthorevaluation_unique_spectator_author_evaluation_and_more.py
config/: settings.py  urls.py  wsgi.py
config/tests/: test_file.py
notes/: credits.json  person-movie-credits.json
tmdb/: apps.py  client.py
tmdb/management/commands/: populate_from_tmdb.py  tmdb.py
